--- a/CSS/output.css
+++ b/CSS/output.css
@@ -277,17 +277,26 @@
   .mt-28 {
     margin-top: calc(var(--spacing) * 28);
   }
+  .mb-2 {
+    margin-bottom: calc(var(--spacing) * 2);
+  }
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
   }
   .mb-14 {
     margin-bottom: calc(var(--spacing) * 14);
   }
+  .mb-28 {
+    margin-bottom: calc(var(--spacing) * 28);
+  }
   .mb-36 {
     margin-bottom: calc(var(--spacing) * 36);
   }
   .ml-3 {
     margin-left: calc(var(--spacing) * 3);
+  }
+  .ml-28 {
+    margin-left: calc(var(--spacing) * 28);
   }
   .flex {
     display: flex;
@@ -319,6 +328,12 @@
   .h-\[90\%\] {
     height: 90%;
   }
+  .h-\[100v\] {
+    height: 100v;
+  }
+  .h-\[100vh\] {
+    height: 100vh;
+  }
   .h-full {
     height: 100%;
   }
@@ -349,8 +364,23 @@
   .w-full {
     width: 100%;
   }
+  .max-w-\[7px\] {
+    max-width: 7px;
+  }
+  .max-w-\[20px\] {
+    max-width: 20px;
+  }
+  .max-w-\[500px\] {
+    max-width: 500px;
+  }
   .max-w-\[550px\] {
     max-width: 550px;
+  }
+  .max-w-\[700px\] {
+    max-width: 700px;
+  }
+  .max-w-\[px\] {
+    max-width: px;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -498,8 +528,20 @@
   .bg-white {
     background-color: var(--color-white);
   }
+  .bg-\[url\(\'\/image\/\'\)\] {
+    background-image: url('/image/');
+  }
+  .bg-\[url\(\'\/image\/fixed-image\'\)\] {
+    background-image: url('/image/fixed-image');
+  }
+  .bg-\[url\(\'\/image\/fixed-image\/\'\)\] {
+    background-image: url('/image/fixed-image/');
+  }
   .bg-\[url\(\'\/image\/fixed-image\/asset-28\.jpeg\'\)\] {
     background-image: url('/image/fixed-image/asset-28.jpeg');
+  }
+  .bg-\[url\(\'\/image\/fixed-image\/asset-29\.jpeg\'\)\] {
+    background-image: url('/image/fixed-image/asset-29.jpeg');
   }
   .bg-\[url\(\'\/image\/hero-image\/asset-1\.jpeg\'\)\] {
     background-image: url('/image/hero-image/asset-1.jpeg');
@@ -866,6 +908,11 @@
   .md\:text-\[17px\] {
     @media (width >= 48rem) {
       font-size: 17px;
+    }
+  }
+  .md\:text-\[24px\] {
+    @media (width >= 48rem) {
+      font-size: 24px;
     }
   }
   .md\:text-\[40px\] {
